<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupCreateApiKeys"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--android:background="@drawable/popup_border">-->

    <TextView
        android:id="@+id/popupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_api_key"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="2dip"
        android:background="@color/colorPrimaryDark"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popup_subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/introduction"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <!--         android:layout_below="@+id/line"
         android:layout_alignParentStart="true"-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dip"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/popup_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/intro_create_api_Key"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <!--   android:layout_below="@+id/popup_subtitle1"
            android:layout_alignParentStart="true"-->
        <TextView
            android:id="@+id/popup_subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/creating_api_keys"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <!--        android:layout_below="@+id/popup_body1"
        android:layout_alignParentStart="true"-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dip"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/popup_body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/info_creating_api_Key"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <!--        android:layout_below="@+id/popup_subtitle2"
        android:layout_alignParentStart="true"-->
    </LinearLayout>
    </ScrollView>
</LinearLayout>
