<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupAddApiKeys"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <!--android:background="@drawable/popup_border">-->

    <TextView
        android:id="@+id/popupTitle"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextUUID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uuid"/>

    </android.support.design.widget.TextInputLayout>

...
